If this is not intentional

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ typeof x                    // "number"
 "Row, row, row your boat,"
 'Gently down the stream.'
 "If you see an alligator, \n"
-"Don\'t forget to scream.'
+"Don\'t forget to scream."
 
 "Row," + "row," + "row" + "your" + "boat,"
 "Gently down the stream\u06D4"
